--- a/src/App.css
+++ b/src/App.css
@@ -251,7 +251,7 @@ p {
   left: -20%;
   background-size: 100%;
   background-position: center center;
-  background-image: url(https://scontent.fsgn13-3.fna.fbcdn.net/v/t39.30808-6/285664824_3295580250716241_2236491884478894543_n.jpg?_nc_cat=102&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=bbnXQNmIB30AX-cbEbT&_nc_ht=scontent.fsgn13-3.fna&oh=00_AT-FYMKMZiIrrXF3BpmFGOIYu8-hCLPJ_ADjdDYmZmlHbg&oe=632DCE43);
+  background-image: url('./avatar.jpg');
   animation: spin 12s linear infinite reverse;
 }
 
