--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,19 @@
   --width-slide: 100%;
   --heigh-slide: 100vh;
 }
+::-webkit-scrollbar {
+  width: 4px;
+  cursor: pointer;
+}
+::-webkit-scrollbar-thumb {
+  width: 4px;
+  background-color: #6E5FDE;
+  border-radius: 30px;
+}
+::-webkit-scrollbar-track-piece {
+  width: 4px;
+  background-color: transparent;
+}
 a {
   text-decoration: none;
   color: var(--primary-color);
