--- a/src/App.css
+++ b/src/App.css
@@ -45,7 +45,7 @@ h3 {
 
 p {
   margin: 0;
-  font-size: small;
+  font-size: medium;
   color: var(--paragraph-color);
 }
 
@@ -75,7 +75,13 @@ p {
   width: 5rem;
   border-bottom: var(--second-bg-color) 0.25rem solid;
 }
-
+/* Hidden */
+.menu-bar--mobile {
+  display: none;
+}
+.break--mobile {
+  display: none;
+}
 /* App */
 .App {
   width: 80%;
@@ -158,7 +164,8 @@ p {
 /* Home */
 .home {
   width: var(--width-slide);
-  height: var(--heigh-slide);
+  /* height: var(--heigh-slide); */
+  padding: 6rem 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -172,11 +179,17 @@ p {
 .home-website {
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
+  /* justify-content: space-evenly; */
   height: 45%;
   width: 10%;
 }
-
+.home-website a {
+  padding: 1rem 0;
+  transition: 0.6s;
+}
+.home-website a:hover {
+  transform: translateY(-15px);
+}
 .home-information {
   margin-right: 5%;
   width: 55%;
@@ -471,11 +484,11 @@ p {
 }
 
 .contact-info {
-  width: 40%;
+  width: 50%;
 }
 
 .contact-form {
-  width: 50%;
+  width: 40%;
 }
 
 .contact-method {
@@ -568,6 +581,11 @@ p {
 }
 .footer-socials .item {
   padding: 2%;
+  transition: 0.4s;
+}
+.footer-socials .item:hover {
+  color: #6E5FDE;
+  transform: translateY(-3px);
 }
 .footer-name {
   margin-top: 3%;
